# python-mocket

./: .coveragerc  .coveralls.yml  .deepsource.toml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  conftest.py  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  runtests.py  setup.cfg  setup.py  shippable.yaml  test_requirements.txt
.github/: workflows
.github/workflows/: main.yml
mocket/: __init__.py  async_mocket.py  bytes.py  compat.py  entry.py  exceptions.py  http.py  httpretty.py  inject.py  io.py  mocket.py  mocketizer.py  mockhttp.py  mockredis.py  mode.py  recording.py  redis.py  registry.py  socket.py  ssl.py  types.py  urllib3.py  utils.py
mocket/compat/: __init__.py  entry.py  mockhttp.py  mockredis.py
mocket/core/: async_mocket.py  compat.py  entry.py  inject.py  io.py  mocket.py  mocketizer.py  mode.py  recording.py  socket.py  types.py  urllib3.py  utils.py
mocket/core/ssl/: context.py  socket.py
mocket/decorators/: async_mocket.py  mocketizer.py
mocket/mocks/: mockhttp.py  mockredis.py
mocket/plugins/: aiohttp_connector.py  httpretty.py  mocket_pook.py  pook_mock_engine.py
mocket/plugins/httpretty/: __init__.py  core.py
mocket/ssl/: context.py  socket.py
scripts/: patch_hosts.sh
tests/: __init__.py  test_asyncio.py  test_bytes.py  test_compat.py  test_http.py  test_http_gevent.py  test_http_httpx.py  test_http_with_xxhash.py  test_httpretty.py  test_https.py  test_httpx.py  test_mocket.py  test_mode.py  test_pook.py  test_redis.py  test_registry.py  test_socket.py  test_utils.py  tests.test_http.HttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.test_http_gevent.GeventHttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.test_http_with_xxhash.HttpEntryTestCase.test_truesendall_with_dump_from_recording.json
tests/main/: test_asyncio.py  test_http.py  test_http_aiohttp.py  test_http_gevent.py  test_http_with_xxhash.py  test_httpretty.py  test_https.py  test_httpx.py  test_mocket.py  test_mode.py  test_pook.py  test_redis.py  tests.main.test_http.HttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.main.test_http.TrueHttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.main.test_http_gevent.GeventHttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.main.test_http_with_xxhash.HttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.main.test_http_with_xxhash.TrueHttpEntryTestCase.test_truesendall_with_dump_from_recording.json  tests.tests27.test_http_gevent.GeventHttpEntryTestCase.test_truesendall_with_dump_from_recording.json
tests/tests27/: README.txt  test_http_gevent.py  test_pook.py
tests/tests35/: test_asyncio.py  test_http_aiohttp.py  test_http_asks_curio.py  test_http_asks_trio.py
tests/tests37/: test_asyncio.py  test_httpx.py
tests/tests38/: README.txt  test_http_aiohttp.py  test_http_httpx.py
tests27/: README.txt
tests35/: README.txt
